had to change display in parser model to display_name (reserved word).  also updated pastes views to include parser select box.

--- a/app/views/parsers/index.html.erb
+++ b/app/views/parsers/index.html.erb
@@ -2,13 +2,13 @@
 
 <table>
   <tr>
-    <th>Display</th>
+    <th>Display Name</th>
     <th>Name</th>
   </tr>
 
 <% @parsers.each do |parser| %>
   <tr>
-    <td><%=h parser.display %></td>
+    <td><%=h parser.display_name %></td>
     <td><%=h parser.name %></td>
     <td><%= link_to 'Show', parser %></td>
     <td><%= link_to 'Edit', edit_parser_path(parser) %></td>
