--- a/app/views/parsers/new.html.erb
+++ b/app/views/parsers/new.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :display %><br />
-    <%= f.text_field :display %>
+    <%= f.label :display_name %><br />
+    <%= f.text_field :display_name %>
   </p>
   <p>
     <%= f.label :name %><br />
