added theme stylesheets to rails public dir.  also setup pastes show action to highlight the syntax.  currently the theme is hard coded.

--- a/app/views/layouts/pastes.html.erb
+++ b/app/views/layouts/pastes.html.erb
@@ -6,6 +6,27 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Pastes: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'syntax/active4d.css' %>
+  <%= stylesheet_link_tag 'syntax/all_hallows_eve.css' %>
+  <%= stylesheet_link_tag 'syntax/amy.css' %>
+  <%= stylesheet_link_tag 'syntax/blackboard.css' %>
+  <%= stylesheet_link_tag 'syntax/brilliance_black.css' %>
+  <%= stylesheet_link_tag 'syntax/brilliance_dull.css' %>
+  <%= stylesheet_link_tag 'syntax/cobalt.css' %>
+  <%= stylesheet_link_tag 'syntax/dawn.css' %>
+  <%= stylesheet_link_tag 'syntax/eiffel.css' %>
+  <%= stylesheet_link_tag 'syntax/espresso_libre.css' %>
+  <%= stylesheet_link_tag 'syntax/idle.css' %>
+  <%= stylesheet_link_tag 'syntax/iplastic.css' %>
+  <%= stylesheet_link_tag 'syntax/lazy.css' %>
+  <%= stylesheet_link_tag 'syntax/mac_classic.css' %>
+  <%= stylesheet_link_tag 'syntax/magicwb_amiga.css' %>
+  <%= stylesheet_link_tag 'syntax/pastels_on_dark.css' %>
+  <%= stylesheet_link_tag 'syntax/slush_poppies.css' %>
+  <%= stylesheet_link_tag 'syntax/spacecadet.css' %>
+  <%= stylesheet_link_tag 'syntax/sunburst.css' %>
+  <%= stylesheet_link_tag 'syntax/twilight.css' %>
+  <%= stylesheet_link_tag 'syntax/zenburnesque.css' %>
 </head>
 <body>
 
