--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Pastes: <%= controller.action_name %></title>
+  <title><%= h(yield(:title) || "Paste") %></title>
+  <%= javascript_include_tag :defaults %>
   <%= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'syntax/active4d.css' %>
   <%= stylesheet_link_tag 'syntax/all_hallows_eve.css' %>
@@ -29,10 +30,11 @@
   <%= stylesheet_link_tag 'syntax/zenburnesque.css' %>
 </head>
 <body>
-
-<p style="color: green"><%= flash[:notice] %></p>
-
-<%= yield %>
-
+	<div id="container">
+		<p style="color: green"><%= flash[:notice] %></p>
+		<div id="content" style="width: 1100px; margin: 10px auto 0px auto;">
+			<%= yield %>
+		</div>
+	</div>
 </body>
 </html>
