--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -8,7 +8,7 @@ body, p, ol, ul, td {
 
 pre {
   background-color: #eee;
-  padding: 10px;
+/*  padding: 10px;*/
   font-size: 11px;
 }
 
@@ -52,3 +52,11 @@ a:hover { color: #fff; background-color:#000; }
   list-style: square;
 }
 
+#code {
+	width: 100%;
+}
+
+#source-numbers {
+	margin-right: 20px;
+	text-align: right;
+}
