--- a/public/stylesheets/syntax/twilight.css
+++ b/public/stylesheets/syntax/twilight.css
@@ -1,137 +1,137 @@
-pre.twilight .DiffInserted {
+.twilight .DiffInserted {
    background-color: #253B22;
    color: #F8F8F8;
 }
-pre.twilight .DiffHeader {
+.twilight .DiffHeader {
    background-color: #0E2231;
    color: #F8F8F8;
    font-style: italic;
 }
-pre.twilight .CssPropertyValue {
+.twilight .CssPropertyValue {
    color: #F9EE98;
 }
-pre.twilight .CCCPreprocessorDirective {
+.twilight .CCCPreprocessorDirective {
    color: #AFC4DB;
 }
-pre.twilight .Constant {
+.twilight .Constant {
    color: #CF6A4C;
 }
-pre.twilight .DiffChanged {
+.twilight .DiffChanged {
    background-color: #4A410D;
    color: #F8F8F8;
 }
-pre.twilight .EmbeddedSource {
+.twilight .EmbeddedSource {
    background-color: #A3A6AD;
 }
-pre.twilight .Support {
+.twilight .Support {
    color: #9B859D;
 }
-pre.twilight .MarkupList {
+.twilight .MarkupList {
    color: #F9EE98;
 }
-pre.twilight .CssConstructorArgument {
+.twilight .CssConstructorArgument {
    color: #8F9D6A;
 }
-pre.twilight .Storage {
+.twilight .Storage {
    color: #F9EE98;
 }
-pre.twilight .line-numbers {
+.twilight .line-numbers {
    background-color: #DDF0FF;
    color: #000000;
 }
-pre.twilight .CssClass {
+.twilight .CssClass {
    color: #9B703F;
 }
-pre.twilight .StringConstant {
+.twilight .StringConstant {
    color: #DDF2A4;
 }
-pre.twilight .CssAtRule {
+.twilight .CssAtRule {
    color: #8693A5;
 }
-pre.twilight .MetaTagInline {
+.twilight .MetaTagInline {
    color: #E0C589;
 }
-pre.twilight .MarkupHeading {
+.twilight .MarkupHeading {
    color: #CF6A4C;
 }
-pre.twilight .CssTagName {
+.twilight .CssTagName {
    color: #CDA869;
 }
-pre.twilight .SupportConstant {
+.twilight .SupportConstant {
    color: #CF6A4C;
 }
-pre.twilight .DiffDeleted {
+.twilight .DiffDeleted {
    background-color: #420E09;
    color: #F8F8F8;
 }
-pre.twilight .CCCPreprocessorLine {
+.twilight .CCCPreprocessorLine {
    color: #8996A8;
 }
-pre.twilight .StringRegexpSpecial {
+.twilight .StringRegexpSpecial {
    color: #CF7D34;
 }
-pre.twilight .EmbeddedSourceBright {
+.twilight .EmbeddedSourceBright {
    background-color: #9C9EA4;
 }
-pre.twilight .InvalidIllegal {
+.twilight .InvalidIllegal {
    background-color: #241A24;
    color: #F8F8F8;
 }
-pre.twilight .SupportFunction {
+.twilight .SupportFunction {
    color: #DAD085;
 }
-pre.twilight .CssAdditionalConstants {
+.twilight .CssAdditionalConstants {
    color: #CA7840;
 }
-pre.twilight .MetaTagAll {
+.twilight .MetaTagAll {
    color: #AC885B;
 }
-pre.twilight .StringRegexp {
+.twilight .StringRegexp {
    color: #E9C062;
 }
-pre.twilight .StringEmbeddedSource {
+.twilight .StringEmbeddedSource {
    color: #DAEFA3;
 }
-pre.twilight .EntityInheritedClass {
+.twilight .EntityInheritedClass {
    color: #9B5C2E;
    font-style: italic;
 }
-pre.twilight .CssId {
+.twilight .CssId {
    color: #8B98AB;
 }
-pre.twilight .CssPseudoClass {
+.twilight .CssPseudoClass {
    color: #8F9D6A;
 }
-pre.twilight .StringVariable {
+.twilight .StringVariable {
    color: #8A9A95;
 }
-pre.twilight .String {
+.twilight .String {
    color: #8F9D6A;
 }
-pre.twilight .Keyword {
+.twilight .Keyword {
    color: #CDA869;
 }
-pre.twilight {
+.twilight {
    background-color: #141414;
    color: #F8F8F8;
 }
-pre.twilight .CssPropertyName {
+.twilight .CssPropertyName {
    color: #C5AF75;
 }
-pre.twilight .DoctypeXmlProcessing {
+.twilight .DoctypeXmlProcessing {
    color: #494949;
 }
-pre.twilight .InvalidDeprecated {
+.twilight .InvalidDeprecated {
    color: #D2A8A1;
    font-style: italic;
 }
-pre.twilight .Variable {
+.twilight .Variable {
    color: #7587A6;
 }
-pre.twilight .Entity {
+.twilight .Entity {
    color: #9B703F;
 }
-pre.twilight .Comment {
+.twilight .Comment {
    color: #5F5A60;
    font-style: italic;
 }
