--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,12 @@
   <%= stylesheet_link_tag 'syntax/zenburnesque.css' %>
 </head>
 <body>
-	<div id="container">
+	<div id="header">
 		<p style="color: green"><%= flash[:notice] %></p>
-		<div id="content" style="width: 1100px; margin: 10px auto 0px auto;">
+		<%= link_to 'All Pastes', pastes_path %>
+	</div>		
+	<div id="container">
 			<%= yield %>
-		</div>
 	</div>
 </body>
 </html>
