--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,4 +1,7 @@
-body { background-color: #fff; color: #333; }
+body { 
+	background-color: #efefef;
+	color: #333; 
+}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -12,9 +15,23 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; }
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
+a { 
+	color: #365ebf;
+	background-color: #efefef;
+	text-decoration: underline;
+}
+
+a:visited { 
+	color: #365ebf; 
+	background-color: #efefef;
+	text-decoration: underline;
+}
+
+a:hover { 
+	color: #efefef; 
+	background-color: #365ebf; 
+	text-decoration: none;
+}
 
 .fieldWithErrors {
   padding: 2px;
@@ -52,11 +69,57 @@ a:hover { color: #fff; background-color:#000; }
   list-style: square;
 }
 
+
+#header {
+	height: 30px;
+	border: #000000 1px solid;
+}
+
+#container {
+	width: 1300px;
+	margin: 10px auto 0px auto;
+}
+
+#content {
+	 width: 1030px; float:left;
+}
+
 #code {
 	width: 100%;
+}
+
+#code-head {
+	padding: 5px 0px 0px 10px;
+}
+
+#code-theme {
+	float: right;
+	width: 300px
 }
 
 #source-numbers {
 	margin-right: 20px;
 	text-align: right;
+}
+
+#right {
+	color: #666666;
+	font-size: 8pt;
+	width: 230px;
+	float:left;
+	padding: 10px 0px 0px 20px;
+}
+
+#right .stat {
+	color: #365ebf;
+	font-weight: bold;
+	font-size: 10pt;
+}
+
+#right a {
+	font-size: 10pt;
+}
+
+.pipe_spacer {
+	margin: 0px 8px;
 }
