cleaned up new/show views as well as related css and app layout. new and show now match from a style perspective.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,12 @@
 	<div id="header">
 		<div id="header-nav">
 			<%= link_to 'New', new_paste_path %>
-			<span class='pipe_spacer'></span>
-			<span class='pipe_spacer'></span>
-			<span class='pipe_spacer'></span>
-			<span class='pipe_spacer'></span>
-			<span class='pipe_spacer'></span>
-			<%= link_to 'All Pastes', pastes_path %>
+			<span class='spacer'></span>
+			<span class='spacer'></span>
+			<span class='spacer'></span>
+			<span class='spacer'></span>
+			<span class='spacer'></span>
+			<%= link_to 'All', pastes_path %>
 		</div>
 	</div>		
 	<div id="notice">
