--- a/public/stylesheets/syntax/cobalt.css
+++ b/public/stylesheets/syntax/cobalt.css
@@ -1,149 +1,153 @@
-pre.cobalt .BlockQuote {
+.cobalt {
+   font-size: 11pt;
+}
+
+.cobalt .BlockQuote {
    background-color: #004480;
 }
-pre.cobalt .DiffInserted {
+.cobalt .DiffInserted {
    background-color: #154F00;
    color: #F8F8F8;
 }
-pre.cobalt .DiffHeader {
+.cobalt .DiffHeader {
    background-color: #000E1A;
    color: #F8F8F8;
 }
-pre.cobalt .CssPropertyValue {
+.cobalt .CssPropertyValue {
    color: #F6F080;
 }
-pre.cobalt .CCPreprocessorDirective {
+.cobalt .CCPreprocessorDirective {
    color: #AFC4DB;
 }
-pre.cobalt .Constant {
+.cobalt .Constant {
    color: #FF628C;
 }
-pre.cobalt .List {
+.cobalt .List {
    background-color: #130D26;
 }
-pre.cobalt .DiffChanged {
+.cobalt .DiffChanged {
    background-color: #806F00;
    color: #F8F8F8;
 }
-pre.cobalt .EmbeddedSource {
+.cobalt .EmbeddedSource {
    background-color: #223545;
    color: #FFFFFF;
 }
-pre.cobalt .Support {
+.cobalt .Support {
    color: #80FFBB;
 }
-pre.cobalt .Punctuation {
+.cobalt .Punctuation {
    color: #E1EFFF;
 }
-pre.cobalt .RawMarkup {
+.cobalt .RawMarkup {
    background-color: #74B9D3;
 }
-pre.cobalt .CssConstructorArgument {
+.cobalt .CssConstructorArgument {
    color: #EB939A;
 }
-pre.cobalt .LangVariable {
+.cobalt .LangVariable {
    color: #FF80E1;
 }
-pre.cobalt .Storage {
+.cobalt .Storage {
    color: #FFEE80;
 }
-pre.cobalt .line-numbers {
+.cobalt .line-numbers {
    background-color: #B36539;
    color: #000000;
 }
-pre.cobalt .CssClass {
+.cobalt .CssClass {
    color: #5FE461;
 }
-pre.cobalt .StringConstant {
+.cobalt .StringConstant {
    color: #80FF82;
 }
-pre.cobalt .CssAtRule {
+.cobalt .CssAtRule {
    color: #F6AA11;
 }
-pre.cobalt .BoldMarkup {
+.cobalt .BoldMarkup {
    font-weight: bold;
    color: #C1AFFF;
 }
-pre.cobalt .CssTagName {
+.cobalt .CssTagName {
    color: #9EFFFF;
 }
-pre.cobalt .Exception {
+.cobalt .Exception {
    color: #FF1E00;
 }
-pre.cobalt .SupportConstant {
+.cobalt .SupportConstant {
    color: #EB939A;
 }
-pre.cobalt .ItalicMarkup {
+.cobalt .ItalicMarkup {
    color: #B8FFD9;
    font-style: italic;
 }
-pre.cobalt .DiffDeleted {
+.cobalt .DiffDeleted {
    background-color: #4C0900;
    color: #F8F8F8;
 }
-pre.cobalt .CCPreprocessorLine {
+.cobalt .CCPreprocessorLine {
    color: #8996A8;
 }
-pre.cobalt .SupportFunction {
+.cobalt .SupportFunction {
    color: #FFB054;
 }
-pre.cobalt .CssAdditionalConstants {
+.cobalt .CssAdditionalConstants {
    color: #EDF080;
 }
-pre.cobalt .MetaTagA {
+.cobalt .MetaTagA {
    color: #9EFFFF;
 }
-pre.cobalt .StringRegexp {
+.cobalt .StringRegexp {
    color: #80FFC2;
 }
-pre.cobalt .StringEmbeddedSource {
+.cobalt .StringEmbeddedSource {
    color: #9EFF80;
 }
-pre.cobalt .EntityInheritedClass {
+.cobalt .EntityInheritedClass {
    color: #80FCFF;
    font-style: italic;
 }
-pre.cobalt .FunctionCall {
+.cobalt .FunctionCall {
    color: #FFEE80;
 }
-pre.cobalt {
+.cobalt {
    background-color: #002240;
    color: #FFFFFF;
 }
-pre.cobalt .CssId {
+.cobalt .CssId {
    color: #FFB454;
 }
-pre.cobalt .StringVariable {
+.cobalt .StringVariable {
    color: #EDEF7D;
 }
-pre.cobalt .Invalid {
+.cobalt .Invalid {
    background-color: #800F00;
    color: #F8F8F8;
 }
-pre.cobalt .String {
+.cobalt .String {
    color: #3AD900;
 }
-pre.cobalt .Keyword {
+.cobalt .Keyword {
    color: #FF9D00;
 }
-pre.cobalt .HeadingMarkup {
+.cobalt .HeadingMarkup {
    font-weight: bold;
    background-color: #001221;
    color: #C8E4FD;
 }
-pre.cobalt .CssPropertyName {
+.cobalt .CssPropertyName {
    color: #9DF39F;
 }
-pre.cobalt .DoctypeXmlProcessing {
+.cobalt .DoctypeXmlProcessing {
    color: #73817D;
 }
-pre.cobalt .Variable {
+.cobalt .Variable {
    color: #CCCCCC;
 }
-pre.cobalt .Comment {
+.cobalt .Comment {
    color: #0088FF;
    font-style: italic;
 }
-pre.cobalt .Entity {
+.cobalt .Entity {
    color: #FFDD00;
 }
