--- a/public/stylesheets/syntax/eiffel.css
+++ b/public/stylesheets/syntax/eiffel.css
@@ -1,121 +1,125 @@
-pre.eiffel .EmbeddedSource {
+.eiffel {
+   font-size: 11pt;
+}
+
+.eiffel .EmbeddedSource {
    background-color: #6597F6;
 }
-pre.eiffel .LibraryObject {
+.eiffel .LibraryObject {
    font-weight: bold;
    color: #6D79DE;
 }
-pre.eiffel .Section {
+.eiffel .Section {
    font-style: italic;
 }
-pre.eiffel .FunctionArgumentAndResultTypes {
+.eiffel .FunctionArgumentAndResultTypes {
    color: #70727E;
 }
-pre.eiffel .TypeName {
+.eiffel .TypeName {
    font-style: italic;
 }
-pre.eiffel .Number {
+.eiffel .Number {
    color: #CD0000;
    font-style: italic;
 }
-pre.eiffel .MarkupList {
+.eiffel .MarkupList {
    color: #B90690;
 }
-pre.eiffel .MarkupTagAttribute {
+.eiffel .MarkupTagAttribute {
    font-style: italic;
 }
-pre.eiffel .LibraryVariable {
+.eiffel .LibraryVariable {
    font-weight: bold;
    color: #21439C;
 }
-pre.eiffel .line-numbers {
+.eiffel .line-numbers {
    background-color: #C3DCFF;
    color: #000000;
 }
-pre.eiffel .FunctionParameter {
+.eiffel .FunctionParameter {
    font-style: italic;
 }
-pre.eiffel .MarkupTag {
+.eiffel .MarkupTag {
    color: #1C02FF;
 }
-pre.eiffel {
+.eiffel {
    background-color: #FFFFFF;
    color: #000000;
 }
-pre.eiffel .MarkupHeading {
+.eiffel .MarkupHeading {
    font-weight: bold;
    color: #0C07FF;
 }
-pre.eiffel .JsOperator {
+.eiffel .JsOperator {
    color: #687687;
 }
-pre.eiffel .InheritedClassName {
+.eiffel .InheritedClassName {
    font-style: italic;
 }
-pre.eiffel .StringInterpolation {
+.eiffel .StringInterpolation {
    color: #26B31A;
 }
-pre.eiffel .MarkupQuote {
+.eiffel .MarkupQuote {
    color: #000000;
    font-style: italic;
 }
-pre.eiffel .MarkupNameOfTag {
+.eiffel .MarkupNameOfTag {
    font-weight: bold;
 }
-pre.eiffel .InvalidTrailingWhitespace {
+.eiffel .InvalidTrailingWhitespace {
    background-color: #FFD0D0;
 }
-pre.eiffel .LibraryConstant {
+.eiffel .LibraryConstant {
    font-weight: bold;
    color: #06960E;
 }
-pre.eiffel .MarkupXmlDeclaration {
+.eiffel .MarkupXmlDeclaration {
    color: #68685B;
 }
-pre.eiffel .PreprocessorDirective {
+.eiffel .PreprocessorDirective {
    font-weight: bold;
    color: #0C450D;
 }
-pre.eiffel .BuiltInConstant {
+.eiffel .BuiltInConstant {
    color: #585CF6;
    font-style: italic;
 }
-pre.eiffel .MarkupDtd {
+.eiffel .MarkupDtd {
    font-style: italic;
 }
-pre.eiffel .Invalid {
+.eiffel .Invalid {
    background-color: #990000;
    color: #FFFFFF;
 }
-pre.eiffel .LibraryFunction {
+.eiffel .LibraryFunction {
    font-weight: bold;
    color: #3C4C72;
 }
-pre.eiffel .String {
+.eiffel .String {
    color: #D80800;
 }
-pre.eiffel .UserDefinedConstant {
+.eiffel .UserDefinedConstant {
    color: #C5060B;
    font-style: italic;
 }
-pre.eiffel .Keyword {
+.eiffel .Keyword {
    font-weight: bold;
    color: #0100B6;
 }
-pre.eiffel .MarkupDoctype {
+.eiffel .MarkupDoctype {
    color: #888888;
 }
-pre.eiffel .FunctionName {
+.eiffel .FunctionName {
    font-weight: bold;
    color: #0000A2;
 }
-pre.eiffel .PreprocessorLine {
+.eiffel .PreprocessorLine {
    color: #1A921C;
 }
-pre.eiffel .Variable {
+.eiffel .Variable {
    color: #0206FF;
    font-style: italic;
 }
-pre.eiffel .Comment {
+.eiffel .Comment {
    color: #00B418;
 }
