--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= h(yield(:title) || "Paste") %></title>
   <%= javascript_include_tag :defaults %>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'app' %>
   <%= stylesheet_link_tag 'syntax/all_hallows_eve.css' %>
   <%= stylesheet_link_tag 'syntax/blackboard.css' %>
   <%= stylesheet_link_tag 'syntax/cobalt.css' %>
