--- a/public/stylesheets/syntax/all_hallows_eve.css
+++ b/public/stylesheets/syntax/all_hallows_eve.css
@@ -5,72 +5,98 @@
 .all_hallows_eve .ClassInheritance {
    font-style: italic;
 }
+
 .all_hallows_eve .Constant {
    color: #3387CC;
 }
+
 .all_hallows_eve .TypeName {
    text-decoration: underline;
 }
+
 .all_hallows_eve .TextBase {
-   background-color: #434242;
+/*   background-color: #434242;*/
    color: #FFFFFF;
 }
+
 .all_hallows_eve {
    background-color: #000000;
    color: #FFFFFF;
 }
+
 .all_hallows_eve .StringEscapesExecuted {
    color: #555555;
 }
+
 .all_hallows_eve .line-numbers {
-   background-color: #73597E;
+/*   background-color: #73597E;*/
    color: #FFFFFF;
 }
+
 .all_hallows_eve .StringExecuted {
-   background-color: #CCCC33;
+/*   background-color: #CCCC33;*/
    color: #000000;
 }
+
 .all_hallows_eve .BlockComment {
-   background-color: #9B9B9B;
+/*   background-color: #9B9B9B;*/
    color: #FFFFFF;
 }
+
 .all_hallows_eve .TagName {
    text-decoration: underline;
 }
+
 .all_hallows_eve .PreProcessorLine {
    color: #D0D0FF;
 }
+
 .all_hallows_eve .SupportFunction {
    color: #C83730;
 }
+
 .all_hallows_eve .FunctionArgument {
    font-style: italic;
 }
+
 .all_hallows_eve .PreProcessorDirective {
 }
+
 .all_hallows_eve .StringEscapes {
    color: #AAAAAA;
 }
+
 .all_hallows_eve .SourceBase {
-   background-color: #000000;
+/*   background-color: #000000;*/
    color: #FFFFFF;
 }
+
 .all_hallows_eve .TagAttribute {
 }
+
 .all_hallows_eve .StringLiteral {
    color: #CCCC33;
 }
+
 .all_hallows_eve .String {
    color: #66CC33;
 }
+
 .all_hallows_eve .Keyword {
    color: #CC7833;
 }
+
 .all_hallows_eve .RegularExssion {
    color: #CCCC33;
 }
+
 .all_hallows_eve .FunctionName {
 }
+
 .all_hallows_eve .Comment {
    color: #9933CC;
+}
+
+.all_hallows_eve .MetaTagInline, .MetaTagAll {
+	color: #0066FF;
 }
