trimmed down the themes to just one (blackboard).  also tested all of the parsers with just the blackboard theme.  works like a charm.

--- a/app/views/pastes/show.html.erb
+++ b/app/views/pastes/show.html.erb
@@ -25,7 +25,7 @@
 	<br/>
 	<br/>
 	<span class="right-heading">Theme</span><br/>
-	<% s_options = '<option value="all_hallows_eve">All Hallows Eve</option><option value="blackboard">Blackboard</option><option value="cobalt">Cobalt</option><option value="eiffel">Eiffel</option><option value="mac_classic">Mac Classic</option><option value="twilight">Twilight</option>' %>
+	<% s_options = '<option value="blackboard">Blackboard</option>' %>
 	<%= select_tag('theme_select', s_options, :onchange => "set_theme(this.value);") %>
 	<br/>
 	<br/>
