--- a/app/views/pastes/show.html.erb
+++ b/app/views/pastes/show.html.erb
@@ -29,8 +29,35 @@
 	<%= select_tag('theme_select', s_options, :onchange => "set_theme(this.value);") %>
 	<br/>
 	<br/>
-	<%= link_to 'raw', paste_path(@paste, :format => :txt) %><span class='spacer'>|</span><%= link_to 'edit', edit_paste_path(@paste) %>
-	<br/>	
+	<div id="right-actions" style="height: 20px;">
+		<%= link_to 'raw', paste_path(@paste, :format => :txt) %><span class='spacer'>|</span><%= link_to 'edit', edit_paste_path(@paste) %>
+		<br/>
+		<br/>
+		<span id="clip-copy"><%= image_tag('clip_22_22.png', { :alt => 'copy to clip board', :size => '22x22' } )%></span><span id="clip-copy-text" style="margin-left: 10px;margin-bottom: 2px; vertical-align: top; display: none;">copy code to clipboard</span>
+		
+	</div>
 </div>
 <div style="clear: both"></div>
 
+<%= hidden_field(:paste, :code) %>
+
+<script language='javascript'>
+	ZeroClipboard.setMoviePath( 'http://localhost:3000/ZeroClipboard.swf' );
+
+	var clip = new ZeroClipboard.Client();
+	clip.setHandCursor( true );
+	clip.setCSSEffects( false );
+
+	clip.setText( document.getElementById('paste_code').value );
+	
+	clip.addEventListener( 'mouseOver', function(client) {
+	                                $('clip-copy-text').show(); 
+	                        } );
+	
+	clip.addEventListener( 'mouseOut', function(client) { 
+	                                $('clip-copy-text').hide(); 
+	                        } );
+	
+	clip.glue('clip-copy');
+	
+</script>
